A series of pedantic changes to 10.2.

--- a/Course_notes_latex/Climate_dynamics_course_notes.tex
+++ b/Course_notes_latex/Climate_dynamics_course_notes.tex
@@ -1757,6 +1757,7 @@ which means that as the system warms due to a decreasing emissivity the Planck f
 \end{figure}
 
 \section{A quadratic representation of imbalance}
+\label{sec:quadratic}
 It was suggested by Bloch-Johnson et al. (2015) to represent the behavior of models, such as MPI-ESM, imbalance as a quadratic function of temperature, rather than a linear function:
 \begin{equation}
 N=F+\lambda_o T_s+ bT_s^2
@@ -2048,33 +2049,32 @@ A challenge with detecting extremes and attributing them to a shift in climate i
 	\begin{center}
 		\includegraphics[width=15 cm]{../Plots/Stability_theory_parabolic.png}
 	\end{center}
-	\caption{The parabolic system with temperature-dependent feedback $[\lambda_0 = -1.5, b= \frac{1}{2}]$. The black curve represents the system without forcing, which has a stable equilibrium at $T=1$ and unstable equilibrium at $T=3$, as shown by the imbalance ($N$) and potential ($V = -\int N dT$) curves. Forcing the system with $F_C = \frac{9}{8}$ Wm$^{-2}$ brings it to the stable limit, where there is no longer a local minimum in the potential.} 
+	\caption{The parabolic system with temperature-dependent feedback $[\lambda_0 = -1.5, b= \frac{1}{2}]$. The black curve represents the system without forcing, which has a stable equilibrium at $T=1$ and unstable equilibrium at $T=3$, as shown by the imbalance ($N$) and pseudo-potential ($V = -\int N dT$) curves. Forcing the system with $F_b = \frac{9}{8}$ Wm$^{-2}$ brings it to the stable limit, where there is no longer a local minimum in the potential.} 
 	\label{fig:parabolic_theory}
 \end{figure}
 
-We saw how non-linear changes in extremes can occur, even when there is no tipping point. So, how will we ever be able to tell if we are approaching a true climate catastrophe?  Some claim that we will see a change in system behaviour close to the tipping point. To understand why, let's first build a system with such a tipping point, by taking an example we have already studied, temperature-dependent climate feedbacks. We can approximate the energy imbalance at the top of the atmosphere with a quadratic equation,
-
+A different class of catastrophes occur if a system undergoes bifurcations (Chapter \ref{chapter:state-dependent}), sometimes popularized as tipping points: if forcing is applied beyond a certain threshold the system might undergo rapid, unstoppable and irreversible change that we classify as a catastrophe. 
+So, how will we ever be able to tell if we are approaching a tipping point climate catastrophe?  Some claim that we will see a change in system behavior close to a tipping point, and that this can warn us if a catastrophe is imminent. To understand why, let's first build a system with such a tipping point, by taking an example we have already studied, temperature-dependent climate feedbacks. We can approximate the energy imbalance at the top of the atmosphere with a quadratic equation,
 \begin{equation}
-N=F+\lambda_0 T + b T^2.
+N=F+\lambda_0 T + b T^2, \nonumber
 \end{equation}
-
-Here, $\lambda_0$ is the feedback at $T=0$ and $b$ determines how the feedback changes with warming. If we choose $b=\frac{1}{2}$,  $\lambda_0 = \frac{3}{2}$, and $F=0$, we have a system in equilibrium ($N=0$) at $T=0$. But if we perturb the system with $F_C = \frac{9}{8}$ Wm$^{-2}$, we raise the imbalance curve so that it just touches the zero-intercept at $T_C=1.5$ K, which is an unstable equilibrium. Any positive perturbation in temperature above $1.5$ K (or indeed any additional forcing) will lead to runaway warming, because the change in imbalance with warming becomes positive, as shown in Figure \ref{fig:parabolic_theory}. We can also see this reflected in the potential curves that we encountered in Chapter \ref{chapter:state-dependent}. The case with zero forcing still contains a local minimum, where our system can safely remain, but perturbing the system with the critical forcing $F_C$ pushes it to the stable limit.
+where $\lambda_0$ is the feedback parameter at $T=0$ and $b$ determines how the feedback changes with warming. If we choose $b=\frac{1}{2}$,  $\lambda_0 = \frac{3}{2}$, and $F=0$, we have a system in equilibrium ($N=0$) at $T=0$. But if we perturb the system with $F_b =\frac{\lambda_o^2}{4b} = \frac{9}{8}$ Wm$^{-2}$ (Section \ref{sec:quadratic}), we raise the imbalance curve so that it just touches the zero-intercept at $T_b=1.5$ K, which is the bifurcation point. Any positive perturbation in temperature above $1.5$ K (or indeed any additional forcing) will lead to runaway warming, because the change in imbalance with warming becomes positive, as shown in Figure \ref{fig:parabolic_theory}. We can also see this reflected in the pseudo-potential curves that we encountered in Chapter \ref{chapter:state-dependent}. The case with zero forcing still contains a local minimum, where our system can safely remain, but perturbing the system with the critical forcing $F_b$ pushes it to the  limit of instability.
+We can see what happens when we approach this tipping point by slowly inching the mixed-layer model towards $F_b$. The orange curve in Figure \ref{fig:bifurc_parabolic} shows this slow increase in forcing, starting at an equilibrium solution of $F=1,T=1$ and moving over 5000 monthly timesteps to just above $F_b$, where the forcing is held constant. After the mixed layer has responded to the additional $\frac{1}{8}$ Wm$^{-2}$ forcing, which still takes a surprising amount of time, it breaches the bifurcation temperature $T_b=1.5$ and runs away to infinity.
+\\
 
 \begin{figure}
 	\begin{center}
 		\includegraphics[width=15 cm]{../plots/Stability_mlm.png}
 	\end{center}
-	\caption{The mixed layer model with temperature-dependent feedbacks is forced from an equilibrium state, $[F=1,T=1]$, slowly toward the tipping point, and held at just about the critical forcing $[F_C=\frac{9}{8}$. The orange line represents a case without variability, and the blue line a case with variability that is approximately equal to the observed variability at the top of the atmosphere. The black line has identical variability to the blue line, but rests in stable equilibrium at $[F=0,T=0]$.} 
+	\caption{The mixed layer model with temperature-dependent feedbacks is forced from an equilibrium state, $[F=1,T=1]$, slowly toward the tipping point, and held at just about the critical forcing $[F_b=\frac{9}{8}]$. The orange line represents a case without variability, and the blue line a case with variability that is approximately equal to the observed variability at the top of the atmosphere. The black line has identical variability to the blue line, but rests in stable equilibrium at $[F=0,T=0]$.} 
 	\label{fig:bifurc_parabolic}
 \end{figure}
 
-We can see what happens when we approach this tipping point by slowly inching the mixed-layer model towards $F_C$. The orange curve in Figure \ref{fig:bifurc_parabolic} shows this slow increase in forcing, starting at an equilibrium solution of $F=1,T_{eq}=1$ and moving over 5000 monthly timesteps to just above $F_C$, where the forcing is held constant. After the mixed layer has responded to the additional $\frac{1}{8}$ Wm$^{-2}$ forcing, which still takes a surprising amount of time, it breaches the critical temperature $T_{C}=1.5$ and runs away to infinity.
 
-Now, what happens when we add variability to the system? The blue curve in Figure \ref{fig:bifurc_parabolic} shows how the mixed layer model behaves when we add white noise to the forcing, approximately equal to the  observed variability in the TOA imbalance. The system exceeds the tipping point much more readily, which is no great surprise, since positive anomalies in the noise can help the system overshoot the critical temperature $T_C$, from which it does not return.
+Now, what happens when we add variability to the system? The blue curve in Figure \ref{fig:bifurc_parabolic} shows how the mixed layer model behaves when we add white noise to the forcing, approximately equal to the  observed variability in the TOA imbalance. The system exceeds the tipping point much more readily, which is no great surprise, since positive anomalies in the noise can help the system overshoot the critical temperature $T_b$, from which it does not return.
+Now look more closely at the blue curve. Does it appear to get noisier as it approaches the tipping point? For a comparison, see what happens when we add the exact same white noise to the equilibrium case, $F=0,T=0$, which is the black curve. The variability is considerably smaller than that of the blue curve, even though the white noise process driving that variability is the same (in fact, it is \textit{identical}, because we seeded the random number generator). The increase in variability near the tipping point is what some claim will act as an early-warning signal of an approaching catastrophe.
 
-Now look more closely at the blue curve. Does it appear to get noisier as it approaches the tipping point? For a comparison, see what happens when we add the exact same white noise to the equilibrium case, $F=0,T=0$, which is the black curve. The variability is considerably smaller than that of the blue curve, even though the white noise process driving that noise is the same (in fact, it is \textit{identical}, because we seeded the random number generator). The increase in variability near the tipping point is what some claim will act as an early-warning signal of an approaching catastrophe.
-
-The noise is amplified in the system close to the tipping point, because the feedback becomes very small, increasing the memory of the system. Our $\lambda$ must now be formulated in terms of the change in the energy balance with warming:
+The noise is amplified in the system close to the tipping point, because the feedback parameter becomes very small, increasing the memory of the system. Our $\lambda$ must now be formulated in terms of the change in the energy balance with warming:
 \begin{equation}
 	\lambda(T) = \frac{dN}{dT} = \lambda_0 + 2bT
 \end{equation}
@@ -2083,11 +2083,13 @@ The noise is amplified in the system close to the tipping point, because the fee
 	\begin{center}
 		\includegraphics[width=15 cm]{../plots/Stability_vari_1.png}
 	\end{center}
-	\caption{Probability distribution of the mixed layer model with temperature-dependent feedbacks, run for 10,000 monthly timesteps with three different forcings at the corresponding equilibrium temperature. The variability in the forcing is $\sigma_{yr} = 1$ Wm$^{-2}$. The two layer model is also shown, with $\gamma = 0.5$. The orange curve is the theoretical Gaussian distribution predicted by an auto-regressive AR(1) model, with $\alpha$ determined by Equation \ref{eq:sigma_linear_theory}.} 
+	\caption{Probability distribution of the mixed layer model with temperature-dependent feedbacks, run for 10,000 monthly timesteps with three different forcings at the corresponding equilibrium temperature. The variability in the forcing is $\sigma_{yr} = 1$ Wm$^{-2}$. The two layer model is also shown, with $\gamma = 1$ Wm$^{-2}$K$^{-1}$. The orange curve is the theoretical Gaussian distribution predicted by an auto-regressive AR(1) model, with $\alpha$ determined by Equation \ref{eq:sigma_linear_theory}.} 
 	\label{fig:variability_shift_parabolic}
 \end{figure}
 
-This means that for the AR(1) process, the memory parameter $\alpha$ is dependent on temperature. As the system temperature increases, the second-order term becomes increasingly important. For our parameter choice of $\lambda_0 < 0$ and $b > 0$, $\lambda$ becomes less negative with temperature, increasing the value of $\alpha$ towards unity.  As a result, the variability in temperature increases with the mean temperature, as shown in Figure \ref{fig:variability_shift_parabolic}. Here we can see that even Equation \ref{eq:sigma_linear_theory} fails to predict the variability close to the tipping point, as $\lambda$ approaches 0 and $\alpha$ approaches 1, because variability pushes the system to the critical point (or just above) for short periods, where the system behaviour bifurcates. Not so for the two-layer model. Here, the ocean heat uptake term $-\gamma T$ acts like a negative feedback, which changes the shape of the curves in \ref{fig:parabolic_theory} on short timescales, before the deep ocean temperature has time to adjust.
+This means that for the AR(1) process, the memory parameter $\alpha$ is dependent on temperature. As the system temperature increases, the second-order term becomes increasingly important. For our parameter choice of $\lambda_0 < 0$ and $b > 0$, $\lambda$ becomes less negative with temperature, increasing the value of $\alpha$ towards unity.  As a result, the variability in temperature increases with the mean temperature, as shown in Figure \ref{fig:variability_shift_parabolic}. Here we can see that  Equation \ref{eq:sigma_linear_theory} works quite well for the lower two temperatures, but fails to predict the variability close to the tipping point. Here $\lambda$ approaches 0 and $\alpha$ approaches 1, and so variability pushes the system towards the bifurcation point, or just above for short periods. Because it takes longer time to return to equilibrium from a positive- than from a negative anomaly the probability distribution is shifted to higher temperatures and is slightly skewed as well.
+
+Not so for the two-layer model, though. If we introduce a second layer. Here, the ocean heat uptake term $-\gamma (T-T_d)$ acts like a kind of negative feedback which on short timescales, before the deep ocean temperature has time to adjust, draws the upper ocean temperature towards the longterm mean. As a result the broadening of the variability found for the mixed-layer model is much less pronounced for the two-layer model (Figure \ref{fig:variability_shift_parabolic}). Thus, if the real Earth's global climate was approaching a bifurcation, then the deep ocean might hinder us from detecting the catastrophe before it is too late. 
 
 \section{Bi-stable climate variability}
 
